# poll_tracker

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  prod.yml
app/: app.py  data.py  plots.py
argo/: cronworkflow.yaml
config/: cds_extraction_config.json  events.csv  extraction_config.json  wiki_extraction_config.json
src/pipeline/: poll_data_extract.py
src/poll_tracker/assets/: bloc_mapping.py  candidates.py  date_utils.py  polling_institute.py  scrapping_asset.py
src/poll_tracker/core/: date_parser.py  fetcher_utils.py  poll_fetcher.py
src/poll_tracker/pipeline/: poll_cds.py  poll_merge.py  poll_wikipedia.py
src/poll_tracker/utils/: data_loader.py
