[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "poll-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.0",
    "bs4>=0.0.2",
    "docker>=7.2.0",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "mwparserfromhell>=0.7.2",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "playwright>=1.61.0",
    "plotly>=6.9.0",
    "polars>=1.42.1",
    "pre-commit>=4.6.1",
    "s3fs>=2026.6.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.59.1",
]
